--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,10 @@
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -19,20 +13,34 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: start;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 30px;
+  background-color: #282c34;
 }
 
 .App-link {
   color: #61dafb;
 }
+ 
+.User {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 50px;
+  justify-content: center;
+}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Username {
+  width: 40%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  background-color: #373f51;
+  margin: 30px;
+  padding: 30px;
+  box-shadow: 0 5px 10px rgba(156, 140, 140, 0.12), 0 1px 2px rgba(84, 79, 79, 0.24);
+  border-radius: 30px;
 }
